Fixed bug with login modal being covered by overlay

--- a/src/main/resources/static/css/admindashboard.css
+++ b/src/main/resources/static/css/admindashboard.css
@@ -11,6 +11,7 @@ html, body {
   position: static; }
 
 .nav-wrapper-outer {
+  z-index: 10000000;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -147,6 +148,7 @@ html, body {
   position: static; }
 
 .nav-wrapper-outer {
+  z-index: 10000000;
   position: fixed;
   top: 0px;
   left: 0px;
