--- a/src/main/resources/static/scss/navbar.scss
+++ b/src/main/resources/static/scss/navbar.scss
@@ -19,7 +19,7 @@ $tloa-yellow: #FFB74D;
 }
 
 .nav-wrapper-outer {
-    // z-index: 9;
+     z-index: 10000000;
     position:fixed;
     top:0px;
     left:0px;
